--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "astral-regex": "^2.0.0",
     "available-typed-arrays": "^1.0.5",
     "axe-core": "^4.6.2",
+    "axios": "^1.2.2",
     "axobject-query": "^2.2.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-polyfill-corejs2": "^0.3.3",
@@ -152,6 +153,8 @@
     "flat-cache": "^3.0.4",
     "flatted": "^3.2.7",
     "for-each": "^0.3.3",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.0",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
     "function.prototype.name": "^1.1.5",
