--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.1.2",
     "@types/eslint": "8.4.10",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
